--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t shannenleong/docker-react -f Dockerfile.dev
+  - docker build -t shannenleong/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true shannenleong/docker-react npm run test
