--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true shannenleong/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: ap-southeast-1
+  app: "Docker"
+  env: "Docker-env"
+  bucket_name: 	"elasticbeanstalk-ap-southeast-1-981359615781"
+  bucket_path: "Docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
