only run travis on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ sudo: required
 language: generic
 services:
   - docker
-
+branches:
+  only:
+    - master
 before_install:
   - docker build -t shannenleong/docker-react -f Dockerfile.dev .
 
